--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Merriweather', serif;
   font-weight: 400;
-  background-image: url("../images/lily.png"); /* Ensure this path matches the file location */
+  background-image: url("images/lily.png"); /* Ensure this path matches the file location */
   background-size: cover; /* Adjusts the image to cover the whole page */
   background-repeat: no-repeat; /* Prevents tiling */
   background-attachment: fixed; /* Keeps the background fixed while scrolling */
